--- a/website/src/pages/Resume.css
+++ b/website/src/pages/Resume.css
@@ -10,7 +10,7 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --text-color: #e0e0e0;
+        --text-color: #adadad;
         --link-color: #4c71a8;
         --paper-bg-color: #315d8f;
         --card-background-color: #315d8f;
